--- a/index.html
+++ b/index.html
@@ -3,40 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asymmetric Encryption</title>
+    <title>Encryption App</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
+        .menu { margin-bottom: 20px; }
+        .menu button { margin-right: 10px; }
+        .page { display: none; }
+        .page.active { display: block; }
         textarea { width: 100%; height: 100px; margin-bottom: 10px; }
         button { margin: 10px 0; }
     </style>
 </head>
 <body>
-    <h1>Asymmetric Encryption Demo</h1>
+    <h1>Encryption App</h1>
 
-    <!-- ส่วนสร้างคู่คีย์ -->
-    <h2>1. สร้างคู่คีย์</h2>
-    <button onclick="generateKeys()">สร้างคู่คีย์</button>
-    <textarea id="privateKey" placeholder="Private Key"></textarea>
-    <textarea id="publicKey" placeholder="Public Key"></textarea>
+    <!-- เมนูสำหรับเปลี่ยนหน้า -->
+    <div class="menu">
+        <button onclick="showPage('generateKeysPage')">สร้างคู่คีย์</button>
+        <button onclick="showPage('encryptPage')">เข้ารหัสข้อความ</button>
+        <button onclick="showPage('decryptPage')">ถอดรหัสข้อความ</button>
+    </div>
 
-    <!-- ส่วนเข้ารหัสข้อความ -->
-    <h2>2. เข้ารหัสข้อความ</h2>
-    <textarea id="messageToEncrypt" placeholder="ข้อความที่จะเข้ารหัส"></textarea>
-    <button onclick="encryptMessage()">เข้ารหัสข้อความ</button>
-    <textarea id="encryptedMessage" placeholder="ข้อความที่เข้ารหัส"></textarea>
+    <!-- หน้าสร้างคู่คีย์ -->
+    <div id="generateKeysPage" class="page active">
+        <h2>สร้างคู่คีย์</h2>
+        <button onclick="generateKeys()">สร้างคู่คีย์</button>
+        <textarea id="privateKey" placeholder="Private Key"></textarea>
+        <textarea id="publicKey" placeholder="Public Key"></textarea>
+    </div>
 
-    <!-- ส่วนถอดรหัสข้อความ -->
-    <h2>3. ถอดรหัสข้อความ</h2>
-    <textarea id="encryptedMessageToDecrypt" placeholder="ข้อความที่เข้ารหัส"></textarea>
-    <button onclick="decryptMessage()">ถอดรหัสข้อความ</button>
-    <textarea id="decryptedMessage" placeholder="ข้อความที่ถอดรหัส"></textarea>
+    <!-- หน้าเข้ารหัสข้อความ -->
+    <div id="encryptPage" class="page">
+        <h2>เข้ารหัสข้อความ</h2>
+        <textarea id="messageToEncrypt" placeholder="ข้อความที่จะเข้ารหัส"></textarea>
+        <textarea id="publicKeyToEncrypt" placeholder="Public Key ของผู้รับ"></textarea>
+        <button onclick="encryptMessage()">เข้ารหัสข้อความ</button>
+        <textarea id="encryptedMessage" placeholder="ข้อความที่เข้ารหัส"></textarea>
+    </div>
+
+    <!-- หน้าถอดรหัสข้อความ -->
+    <div id="decryptPage" class="page">
+        <h2>ถอดรหัสข้อความ</h2>
+        <textarea id="encryptedMessageToDecrypt" placeholder="ข้อความที่เข้ารหัส"></textarea>
+        <textarea id="privateKeyToDecrypt" placeholder="Private Key ของคุณ"></textarea>
+        <button onclick="decryptMessage()">ถอดรหัสข้อความ</button>
+        <textarea id="decryptedMessage" placeholder="ข้อความที่ถอดรหัส"></textarea>
+    </div>
 
     <script>
-        // แทนที่ URL นี้ด้วย URL ของ Flask API บน Render
         const API_URL = 'https://encryption-message-backend.onrender.com';
-        
-        // ฟังก์ชันสำหรับสร้างคู่คีย์      
-        // ตัวอย่างการเรียก API
+
+        // ฟังก์ชันสำหรับเปลี่ยนหน้า
+        function showPage(pageId) {
+            // ซ่อนทุกหน้า
+            document.querySelectorAll('.page').forEach(page => {
+                page.classList.remove('active');
+            });
+            // แสดงหน้าที่เลือก
+            document.getElementById(pageId).classList.add('active');
+        }
+
+        // ฟังก์ชันสำหรับสร้างคู่คีย์
         async function generateKeys() {
             const response = await fetch(`${API_URL}/generate_keys`);
             const data = await response.json();
@@ -47,7 +74,7 @@
         // ฟังก์ชันสำหรับเข้ารหัสข้อความ
         async function encryptMessage() {
             const message = document.getElementById('messageToEncrypt').value;
-            const publicKey = document.getElementById('publicKey').value;
+            const publicKey = document.getElementById('publicKeyToEncrypt').value;
             const response = await fetch(`${API_URL}/encrypt`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -60,7 +87,7 @@
         // ฟังก์ชันสำหรับถอดรหัสข้อความ
         async function decryptMessage() {
             const encryptedMessage = document.getElementById('encryptedMessageToDecrypt').value;
-            const privateKey = document.getElementById('privateKey').value;
+            const privateKey = document.getElementById('privateKeyToDecrypt').value;
             const response = await fetch(`${API_URL}/decrypt`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
