--- a/index.html
+++ b/index.html
@@ -4,97 +4,166 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encryption App</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .menu { margin-bottom: 20px; }
-        .menu button { margin-right: 10px; }
         .page { display: none; }
         .page.active { display: block; }
         textarea { width: 100%; height: 100px; margin-bottom: 10px; }
-        button { margin: 10px 0; }
     </style>
 </head>
 <body>
-    <h1>Encryption App</h1>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Encryption App</h1>
 
-    <!-- เมนูสำหรับเปลี่ยนหน้า -->
-    <div class="menu">
-        <button onclick="showPage('generateKeysPage')">สร้างคู่คีย์</button>
-        <button onclick="showPage('encryptPage')">เข้ารหัสข้อความ</button>
-        <button onclick="showPage('decryptPage')">ถอดรหัสข้อความ</button>
+        <!-- เมนูสำหรับเปลี่ยนหน้า -->
+        <div class="d-flex justify-content-center mb-4">
+            <button class="btn btn-primary mx-2" onclick="showPage('generateKeysPage')">สร้างคู่คีย์</button>
+            <button class="btn btn-success mx-2" onclick="showPage('encryptPage')">เข้ารหัสข้อความ</button>
+            <button class="btn btn-warning mx-2" onclick="showPage('decryptPage')">ถอดรหัสข้อความ</button>
+        </div>
+
+        <!-- หน้าสร้างคู่คีย์ -->
+        <div id="generateKeysPage" class="page active">
+            <h2 class="text-center mb-4">สร้างคู่คีย์</h2>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-primary" onclick="generateKeys()">สร้างคู่คีย์</button>
+            </div>
+            <div class="mt-4">
+                <textarea class="form-control" id="privateKey" placeholder="Private Key" readonly></textarea>
+                <textarea class="form-control" id="publicKey" placeholder="Public Key" readonly></textarea>
+            </div>
+        </div>
+
+        <!-- หน้าเข้ารหัสข้อความ -->
+        <div id="encryptPage" class="page">
+            <h2 class="text-center mb-4">เข้ารหัสข้อความ</h2>
+            <div class="mb-3">
+                <textarea class="form-control" id="messageToEncrypt" placeholder="ข้อความที่จะเข้ารหัส"></textarea>
+            </div>
+            <div class="mb-3">
+                <textarea class="form-control" id="publicKeyToEncrypt" placeholder="Public Key ของผู้รับ"></textarea>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-success" onclick="encryptMessage()">เข้ารหัสข้อความ</button>
+            </div>
+            <div class="mt-4">
+                <textarea class="form-control" id="encryptedMessage" placeholder="ข้อความที่เข้ารหัส" readonly></textarea>
+            </div>
+        </div>
+
+        <!-- หน้าถอดรหัสข้อความ -->
+        <div id="decryptPage" class="page">
+            <h2 class="text-center mb-4">ถอดรหัสข้อความ</h2>
+            <div class="mb-3">
+                <textarea class="form-control" id="encryptedMessageToDecrypt" placeholder="ข้อความที่เข้ารหัส"></textarea>
+            </div>
+            <div class="mb-3">
+                <textarea class="form-control" id="privateKeyToDecrypt" placeholder="Private Key ของคุณ"></textarea>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-warning" onclick="decryptMessage()">ถอดรหัสข้อความ</button>
+            </div>
+            <div class="mt-4">
+                <textarea class="form-control" id="decryptedMessage" placeholder="ข้อความที่ถอดรหัส" readonly></textarea>
+            </div>
+        </div>
     </div>
 
-    <!-- หน้าสร้างคู่คีย์ -->
-    <div id="generateKeysPage" class="page active">
-        <h2>สร้างคู่คีย์</h2>
-        <button onclick="generateKeys()">สร้างคู่คีย์</button>
-        <textarea id="privateKey" placeholder="Private Key"></textarea>
-        <textarea id="publicKey" placeholder="Public Key"></textarea>
-    </div>
-
-    <!-- หน้าเข้ารหัสข้อความ -->
-    <div id="encryptPage" class="page">
-        <h2>เข้ารหัสข้อความ</h2>
-        <textarea id="messageToEncrypt" placeholder="ข้อความที่จะเข้ารหัส"></textarea>
-        <textarea id="publicKeyToEncrypt" placeholder="Public Key ของผู้รับ"></textarea>
-        <button onclick="encryptMessage()">เข้ารหัสข้อความ</button>
-        <textarea id="encryptedMessage" placeholder="ข้อความที่เข้ารหัส"></textarea>
-    </div>
-
-    <!-- หน้าถอดรหัสข้อความ -->
-    <div id="decryptPage" class="page">
-        <h2>ถอดรหัสข้อความ</h2>
-        <textarea id="encryptedMessageToDecrypt" placeholder="ข้อความที่เข้ารหัส"></textarea>
-        <textarea id="privateKeyToDecrypt" placeholder="Private Key ของคุณ"></textarea>
-        <button onclick="decryptMessage()">ถอดรหัสข้อความ</button>
-        <textarea id="decryptedMessage" placeholder="ข้อความที่ถอดรหัส"></textarea>
-    </div>
-
+    <!-- Bootstrap 5 JS และ dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         const API_URL = 'https://encryption-message-backend.onrender.com';
 
         // ฟังก์ชันสำหรับเปลี่ยนหน้า
         function showPage(pageId) {
-            // ซ่อนทุกหน้า
             document.querySelectorAll('.page').forEach(page => {
                 page.classList.remove('active');
             });
-            // แสดงหน้าที่เลือก
             document.getElementById(pageId).classList.add('active');
         }
 
         // ฟังก์ชันสำหรับสร้างคู่คีย์
         async function generateKeys() {
-            const response = await fetch(`${API_URL}/generate_keys`);
-            const data = await response.json();
-            document.getElementById('privateKey').value = data.private_key;
-            document.getElementById('publicKey').value = data.public_key;
+            try {
+                const response = await fetch(`${API_URL}/generate_keys`);
+                const data = await response.json();
+                document.getElementById('privateKey').value = data.private_key;
+                document.getElementById('publicKey').value = data.public_key;
+            } catch (error) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'เกิดข้อผิดพลาด',
+                    text: 'ไม่สามารถสร้างคู่คีย์ได้',
+                });
+            }
         }
 
         // ฟังก์ชันสำหรับเข้ารหัสข้อความ
         async function encryptMessage() {
             const message = document.getElementById('messageToEncrypt').value;
             const publicKey = document.getElementById('publicKeyToEncrypt').value;
-            const response = await fetch(`${API_URL}/encrypt`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ message, public_key: publicKey })
-            });
-            const data = await response.json();
-            document.getElementById('encryptedMessage').value = data.encrypted_message;
+
+            if (!publicKey || !publicKey.includes('-----BEGIN PUBLIC KEY-----')) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Public Key ไม่ถูกต้อง',
+                    text: 'กรุณาตรวจสอบ Public Key อีกครั้ง',
+                });
+                return;
+            }
+
+            try {
+                const response = await fetch(`${API_URL}/encrypt`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message, public_key: publicKey })
+                });
+                const data = await response.json();
+                document.getElementById('encryptedMessage').value = data.encrypted_message;
+            } catch (error) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'เกิดข้อผิดพลาด',
+                    text: 'ไม่สามารถเข้ารหัสข้อความได้',
+                });
+            }
         }
 
         // ฟังก์ชันสำหรับถอดรหัสข้อความ
         async function decryptMessage() {
             const encryptedMessage = document.getElementById('encryptedMessageToDecrypt').value;
             const privateKey = document.getElementById('privateKeyToDecrypt').value;
-            const response = await fetch(`${API_URL}/decrypt`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ encrypted_message: encryptedMessage, private_key: privateKey })
-            });
-            const data = await response.json();
-            document.getElementById('decryptedMessage').value = data.decrypted_message;
+
+            if (!privateKey || !privateKey.includes('-----BEGIN PRIVATE KEY-----')) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Private Key ไม่ถูกต้อง',
+                    text: 'กรุณาตรวจสอบ Private Key อีกครั้ง',
+                });
+                return;
+            }
+
+            try {
+                const response = await fetch(`${API_URL}/decrypt`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ encrypted_message: encryptedMessage, private_key: privateKey })
+                });
+                const data = await response.json();
+                document.getElementById('decryptedMessage').value = data.decrypted_message;
+            } catch (error) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'เกิดข้อผิดพลาด',
+                    text: 'ไม่สามารถถอดรหัสข้อความได้',
+                });
+            }
         }
     </script>
 </body>
